[project]
name = "ansible-local-main"
version = "0.1.0"
description = "Ansible collection local.main"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansible-core>=2.15.0",
    "ansible-lint>=6.22.0",
    "yamllint>=1.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "molecule>=6.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
